--- a/code.html
+++ b/code.html
@@ -1,1 +1,9 @@
-The most commonly used block-level elements are &lt;div&gt;, &lt;p&gt;, &lt;h1&gt; through &lt;h6&gt;, &lt;form&gt;, &lt;ol&gt;, &lt;ul&gt;, &lt;li&gt;, and so on. Whereas, the commonly used inline-level elements are &lt;img&gt;, &lt;a&gt;, &lt;span&gt;, &lt;strong&gt;, &lt;b&gt;, &lt;em&gt;, &lt;i&gt;, &lt;code&gt;, &lt;input&gt;, &lt;button&gt;, etc
+&lt;form&gt;
+    &lt;label for="myweek"&gt;Select Week:&lt;/label&gt;
+    &lt;input type="week" id="myweek"&gt;
+&lt;/form&gt;
+
+
+
+
+
