--- a/code.html
+++ b/code.html
@@ -1,9 +1,1 @@
-&lt;form&gt;
-    &lt;label for="myweek"&gt;Select Week:&lt;/label&gt;
-    &lt;input type="week" id="myweek"&gt;
-&lt;/form&gt;
-
-
-
-
-
+In HTML5, the &lt;tfoot&gt; element can be placed either before or after the &lt;tbody&gt; and &lt;tr&gt; elements, but must appear after any &lt;caption&gt;, &lt;colgroup&gt;, and &lt;thead&gt; elements.
