--- a/css-box model.html
+++ b/css-box model.html
@@ -1,45 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>css-box model</title>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
-.box1{
-    background-color: blue;
-    /*height: 60px;*/
-    width:  90px;
-    border: 2px solid black;
-     padding: 55px;
-     margin: 10px; 
 
-    /*padding: 10px;*/
-}
-.box2{
-    background-color: blue;
-    height: 60px;
-    width:  250px;
-    /*padding: 10px;*/
-}
-.outerbox{
-    border: 5px solid blue;
-    width: 300px;
-    background-color: brown;
-}
+        .box1 {
+            background-color: blue;
+            /*height: 60px;*/
+            width: 90px;
+            border: 2px solid black;
+            padding: 55px;
+            margin: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+            /*margin-top: 30px;
+            margin-bottom: 30px;*/
+
+            /*padding: 10px;*/
+        }
+
+        .box2 {
+            background-color: blue;
+            height: 70px;
+            width: 250px;
+            border: 5px solid;
+            margin-top: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-top: 10px;
+            padding-bottom: 10px;
+
+
+            /*padding: 10px;*/
+        }
+
+        .outerbox {
+            border: 5px solid blue;
+            width: 300px;
+            background-color: lightgrey;
+            padding: 15px 0 15px 0;
+        }
+        li{
+            list-style: none;
+        }
     </style>
 </head>
+
 <body>
     <div class="outerbox">
-    <div class="box1">
-        Hello
+        <div class="box1">
+            <ol>
+                <li>Hello world</li>
+                <li>Hello world</li>
+                <li>Hello world</li>
+            </ol>
+
+        </div>
     </div>
-</div>
     <div class="box2">
         Hello world
     </div>
 </body>
+
 </html>
