--- a/css-units.html
+++ b/css-units.html
@@ -31,12 +31,52 @@ span{
     margin: auto;
     overflow: auto;
 }
-h3{
-    color: blueviolet;
+.right{
+    display: flex;
+    justify-content: center;
+}
+
+nav,ul,li{
+    list-style: none;
+}
+nav{
+    display: flex;
+    justify-content:space-around;
 }
     </style>
 </head>
 <body>
+    <header> <nav>
+       <div class="left">
+        developer
+       <div class="right">
+
+
+       
+    </nav></header>
+    <h1>
+        tutorial</h1>
+        <ul>
+            <li>Home</li>
+            <li>contact</li>
+            <li>About</li>
+            <li>email</li>
+            
+        </ul>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
     <h1>
         <p> Html page</p>
     </h1>
